@startuml

title __HUDELEMENTS's Class Diagram__\n

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.Crosshair {
              - crosshairBorderColor : Paint
              - crosshairBorderWidth : double
              - crosshairColor : Paint
              - crosshairHeight : double
              - crosshairWidth : double
              - distBeforeCrosshair : double
              - isBorder : boolean
              - isShowing : boolean
              - screenHeight : double
              - screenWidth : double
              + Crosshair()
              + getCrosshairBorderColor()
              + getCrosshairBorderWidth()
              + getCrosshairColor()
              + getCrosshairHeight()
              + getCrosshairWidth()
              + getDistBeforeCrosshair()
              + getScreenHeight()
              + getScreenWidth()
              + isBorder()
              + isShowing()
              + setBorder()
              + setCrosshairBorderColor()
              + setCrosshairBorderWidth()
              + setCrosshairColor()
              + setCrosshairHeight()
              + setCrosshairWidth()
              + setDistBeforeCrosshair()
              + setScreenHeight()
              + setScreenWidth()
              + setShowing()
              + update()
              - drawRect()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.DeathMenu {
              - GREEN : Color
              {static} - TAG : String
              - arcH : double
              - arcW : double
              - backdropBorderPaint : Paint
              - backdropBorderWidth : double
              - backdropPaint : Paint
              - doubleArrow : String
              - height : double
              - isCentered : boolean
              - isDead : boolean
              - pauseText : Font
              - pauseTitle : Font
              - screenHeight : double
              - screenWidth : double
              - singleArrow : String
              - textPaint : Paint
              - width : double
              + DeathMenu()
              + getHeight()
              + getWidth()
              + isDead()
              + setCentered()
              + setDead()
              + setHeight()
              + setWidth()
              + update()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.HUDElement {
              - addedGroup : Group
              - elementTag : String
              - group : Group
              - pos : Point2D
              + HUDElement()
              + addNode()
              + getElementTag()
              + getGroup()
              + getPos()
              + setElementTag()
              + setGroup()
              + setPos()
              + update()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.PauseMenu {
              - GREEN : Color
              - arcH : double
              - arcW : double
              - backdropBorderPaint : Paint
              - backdropBorderWidth : double
              - backdropPaint : Paint
              - doubleArrow : String
              - height : double
              - isCentered : boolean
              - isPaused : boolean
              - pauseText : Font
              - pauseTitle : Font
              - screenHeight : double
              - screenWidth : double
              - singleArrow : String
              - textPaint : Paint
              - width : double
              + PauseMenu()
              + getHeight()
              + getWidth()
              + isPaused()
              + setCentered()
              + setHeight()
              + setPaused()
              + setWidth()
              + update()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.PlayerInfo {
              + PlayerInfo()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace GUI.HUD {
        namespace HUDElements {
          class app.GUI.HUD.HUDElements.StatusBar {
              - arcHeight : double
              - arcWidth : double
              - borderColor : Color
              - borderWidth : double
              - currStatus : double
              - emptyColor : Color
              - fullColor : Color
              - height : double
              - innerBarColor : Color
              - isBorder : boolean
              - isColorInterpolated : boolean
              - isDefaultDirection : boolean
              - isEmpty : boolean
              - isVertical : boolean
              - maxStatus : double
              - outerBarColor : Color
              - width : double
              + StatusBar()
              + getBorderWidth()
              + getCurrStatus()
              + getHeight()
              + getInnerBarColor()
              + getIsEmpty()
              + getIsVertical()
              + getMaxStatus()
              + getOuterBarColor()
              + getWidth()
              + isColorInterpolated()
              + isDefaultDirection()
              + printStatus()
              + setArcHeight()
              + setArcWidth()
              + setBorder()
              + setBorderColor()
              + setBorderWidth()
              + setColorInterpolation()
              + setCurrStatus()
              + setDefaultDirection()
              + setHeight()
              + setInnerBarColor()
              + setMaxStatus()
              + setOuterBarColor()
              + setVertical()
              + setWidth()
              + update()
          }
        }
      }
    }
  }
  

  app.GUI.HUD.HUDElements.Crosshair -up-|> app.GUI.HUD.HUDElements.HUDElement
  app.GUI.HUD.HUDElements.DeathMenu -up-|> app.GUI.HUD.HUDElements.HUDElement
  app.GUI.HUD.HUDElements.DeathMenu o-- app.GameBuilder : context
  app.GUI.HUD.HUDElements.DeathMenu o-- app.GUI.menu.MenuUtil : menuUtil
  app.GUI.HUD.HUDElements.DeathMenu o-- app.GUI.menu.InterfaceBuilder : pause
  app.GUI.HUD.HUDElements.PauseMenu -up-|> app.GUI.HUD.HUDElements.HUDElement
  app.GUI.HUD.HUDElements.PauseMenu o-- app.GameBuilder : context
  app.GUI.HUD.HUDElements.PauseMenu o-- app.GUI.menu.MenuUtil : menuUtil
  app.GUI.HUD.HUDElements.PauseMenu o-- app.GUI.menu.InterfaceBuilder : pause
  app.GUI.HUD.HUDElements.PlayerInfo -up-|> app.GUI.HUD.HUDElements.HUDElement
  app.GUI.HUD.HUDElements.PlayerInfo o-- app.GameBuilder : context
  app.GUI.HUD.HUDElements.StatusBar -up-|> app.GUI.HUD.HUDElements.HUDElement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
